<resources>
    <string name="app_name">Markit Survey</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="applicationId">2</string>
    <string name="applicationVersionId">2</string>
    <string name="applicationVersion">2.2</string>
    <string name="keyValueDB">MarkitSurveyDB</string>
    <string name="serverDateAndTime">serverDateAndTime</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_projects">My Projects</string>
    <string name="synchronize">Synchronize</string>
    <string name="logs">Logs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="about_app">About App</string>
    <string name="permission">Permission</string>
    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>

    <string name="R3baseURL">http://3.1.169.122:6660/</string>

    <string name="testRole">Support Mobile</string>

    <string-array name="arrayFontSize">
        <item>Select Font</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>